<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?defaultBackground"
    tools:context=".fragments.Utilities">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/utilities_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
</RelativeLayout>
